# event-sourcing-platform

./: .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  publish.yml  test.yml
docs-site/: package.json
docs-site/static/: api-docs-llm.txt
docs/adrs/: ADR-004-command-handlers-in-aggregates.md
event-sourcing/python/: Makefile  README.md  pyproject.toml
event-sourcing/typescript/: Makefile  README.md  package.json
examples/: README.md
examples/001-basic-store-ts/: README.md  package.json
examples/002-simple-aggregate-ts/: vsa.yaml
examples/007-ecommerce-complete-ts/: README.md
examples/008-banking-complete-ts/: README.md
examples/010-observability-ts/: README.md  package.json  tsconfig.json
vsa/: Cargo.toml  README.md  TESTING-FRAMEWORK.md
vsa/docs/: GETTING-STARTED.md
vsa/examples/: Makefile  README.md  TESTING.md  slice.reference.yaml  vsa.minimal.yaml  vsa.reference.yaml
vsa/examples/05-todo-list-py/: Makefile  README.md  pyproject.toml  vsa.yaml
vsa/examples/05-todo-list-py/src/contexts/tasks/: TaskAggregate.py
vsa/examples/05-todo-list-py/src/contexts/tasks/complete-task/: CompleteTask.test.py  CompleteTaskCommand.py  CompleteTaskEvent.py  CompleteTaskHandler.py
vsa/examples/05-todo-list-py/src/contexts/tasks/create-task/: CreateTask.test.py  CreateTaskCommand.py  CreateTaskHandler.py  TaskCreatedEvent.py
vsa/examples/05-todo-list-py/src/contexts/tasks/delete-task/: DeleteTask.test.py  DeleteTaskCommand.py  DeleteTaskHandler.py  TaskDeletedEvent.py
(+163 files in other folders)
